welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: ';' expected but integer literal found.
  else if (((a+b)==(10+b+c))||((a+b)==(10+a+c))) {retrun 5}
                                                         ^